# Network-Attack-Map

./: README.MD  docker-compose.yml
Django_Backend/: Dockerfile  manage.py  pyproject.toml
Django_Backend/MariaDB/: MariaDB.cnf
Django_Backend/Network_Attack_Map/: asgi.py  settings.py  urls.py  wsgi.py
Django_Backend/REST_API/: elasticsearch.py  forms.py  urls.py  views.py
Elasticsearch/: Dockerfile
LogStash/: Dockerfile
LogStash/pipeline/: logstash.conf
MariaDB/: init.sql
PyRedis/: Sample_Threat_Logs.csv  redis-script.py
React_FrontEnd/: Dockerfile  package-lock.json  package.json  server.ts
React_FrontEnd/public/: index.html
React_FrontEnd/src/: index.tsx
React_FrontEnd/src/components/: App.tsx
React_FrontEnd/src/components/dashboard/: DashboardAttackMap.tsx  DashboardLogsTable.tsx  DashboardMapMarkers.tsx  DashboardPolylineAnimation.tsx  DashboardStructure.tsx
React_FrontEnd/src/components/drawer/: DrawerSettings.tsx  DrawerStructure.tsx
React_FrontEnd/src/components/error/: PageNotFound.tsx
React_FrontEnd/src/components/header/: HeaderAccountDialog.tsx  HeaderAccountForms.tsx  HeaderStructure.tsx
React_FrontEnd/src/helpers/: axiosRequestsConfiguration.tsx  calculatePolylineLength.tsx
React_FrontEnd/src/hooks/: useAnimationFrame.tsx
React_FrontEnd/src/others/: reportWebVitals.ts
React_FrontEnd/src/slices/: accountInformationSlice.tsx  attackMapSlice.tsx  attackTableSlice.tsx  userInterfaceSlice.tsx
React_FrontEnd/src/store/: store.tsx
React_FrontEnd/src/styles/: appStyles.tsx
Redis/: Dockerfile
(+20 files in other folders)
